<resources>
    <string name="app_name">ActuArry</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="daily">Activity</string>
    <string name="gallery">Gallery</string>
    <string name="video">Media</string>
    <string name="profile">Profile</string>
    <string name="fhome_nama">Ari Sumardi</string>
    <string name="fhome_about">About Me</string>
    <string name="fhome_desc">Saya adalah seorang mahasiswa Teknik Informatika UNIKOM yang berasal dari Sumedang.
                            Saya merupakan tipikal orang yang menyukai hal-hal baru terutama dalam dunia teknologi dan programming
    </string>
    <string name="fhome_title_myinterest">My Interest</string>
    <string name="fhome_card_hobby">Hobby</string>
    <string name="fhome_card_food">Food</string>
    <string name="fhome_card_drink">Drink</string>
    <string name="fhome_card_interest">Interest</string>
    <string name="fhome_card_goals">Goals</string>
    <string name="fhome_card_religion">Religion</string>

    <string name="fhome_isi_hobby">Play Game</string>
    <string name="fhome_isi_food">Mie Ayam</string>
    <string name="fhome_isi_drink">Coffee</string>
    <string name="fhome_isi_interest">Programming</string>
    <string name="fhome_isi_goals">Build Startup</string>
    <string name="fhome_isi_religion">Islam</string>

    <string name="friend1">Agus Wasiat</string>
    <string name="friend2">Dandi Putra</string>
    <string name="friend3">Gilang Eka</string>
    <string name="friend4">Ferawati</string>

    <string name="descfriend1">si <i>sadboy</i> yang kerap nyepam story WA</string>
    <string name="descfriend2">orangnya kayak bocah, tapi baik hati</string>
    <string name="descfriend3">diajak ngobrol kadang kagak nyambung</string>
    <string name="descfriend4">Si cantik yang always care</string>

    <string name="about_desc">Saya lahir dan besar di Cijeungjing, sebuah daerah kecil yang
        ada di pelosok Kabupaten Sumedang. Saya bercita-cita untuk membangun startup di masa depan.
    </string>
</resources>
