<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/home" />
    <item
        android:id="@+id/navigation_daily"
        android:icon="@drawable/ic_nav_daily"
        android:title="@string/daily" />
    <item
        android:id="@+id/navigation_galery"
        android:icon="@drawable/ic_nav_galery"
        android:title="@string/gallery" />
    <item
        android:id="@+id/navigation_video"
        android:icon="@drawable/ic_nav_video"
        android:title="@string/video" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_nav_profile"
        android:title="@string/profile" />
</menu>