<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingBottom="65dp"
    android:background="@color/colorAlmostAzure">

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:fontFamily="@font/gilroybold"
        android:text="My Best Friends"
        />
    <View
        android:id="@+id/view3"
        android:layout_width="40dp"
        android:layout_height="2dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="5dp"
        android:background="@color/colorPrimary" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card2"
                        android:layout_width="365dp"
                        android:layout_height="250dp"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:background="@color/colorPrimary"
                        card_view:cardCornerRadius="8dp"
                        android:layout_marginLeft="14dp"
                        android:layout_marginRight="14dp">

                         <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@color/colorBgWhite">
                                <ImageView
                                    android:id="@+id/ImgFriend"
                                    android:contentDescription="@string/gallery"
                                    android:layout_width="250dp"
                                    android:layout_height="160dp"
                                    android:layout_centerHorizontal="true"
                                    android:layout_centerVertical="true"
                                    android:src="@drawable/img_friend1" />
                                <TextView
                                    android:id="@+id/TxtFriendName"
                                    android:layout_below="@id/ImgFriend"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerHorizontal="true"
                                    android:text="@string/friend1"
                                    android:layout_marginTop="5dp"
                                    android:textColor="@color/colorPrimary"
                                    android:textSize="18sp"
                                    android:fontFamily="@font/gilroybold" />
                                <TextView
                                    android:id="@+id/TxtFriendDesc"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@id/TxtFriendName"
                                    android:layout_centerHorizontal="true"
                                    android:text="@string/descfriend1"
                                    android:textColor="@color/colorSlateGray"
                                    android:textSize="12sp"
                                    android:fontFamily="@font/gilroyregular"
                                    android:textStyle="italic"/>
                         </RelativeLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                            android:id="@+id/card3"
                            android:layout_width="365dp"
                            android:layout_height="250dp"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:background="@color/colorPrimary"
                            card_view:cardCornerRadius="8dp"
                            android:layout_marginLeft="14dp"
                            android:layout_marginRight="14dp">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@color/colorBgWhite">

                                <ImageView
                                    android:id="@+id/ImgFriend2"
                                    android:contentDescription="@string/gallery"
                                    android:layout_width="260dp"
                                    android:layout_height="160dp"
                                    android:layout_centerHorizontal="true"
                                    android:layout_centerVertical="true"
                                    android:src="@drawable/img_friend2" />
                                <TextView
                                    android:id="@+id/TxtFriendName2"
                                    android:layout_below="@id/ImgFriend2"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerHorizontal="true"
                                    android:text="@string/friend2"
                                    android:layout_marginTop="5dp"
                                    android:textColor="@color/colorPrimary"
                                    android:textSize="18sp"
                                    android:fontFamily="@font/gilroybold" />
                                <TextView
                                    android:id="@+id/TxtFriendDesc2"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@id/TxtFriendName2"
                                    android:layout_centerHorizontal="true"
                                    android:text="@string/descfriend2"
                                    android:textColor="@color/colorSlateGray"
                                    android:textSize="12sp"
                                    android:fontFamily="@font/gilroyregular"
                                    android:textStyle="italic"/>
                            </RelativeLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                            android:id="@+id/card4"
                            android:layout_width="365dp"
                            android:layout_height="250dp"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:background="@color/colorPrimary"
                            card_view:cardCornerRadius="8dp"
                            android:layout_marginLeft="14dp"
                            android:layout_marginRight="14dp">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@color/colorBgWhite">

                                <ImageView
                                    android:id="@+id/ImgFriend3"
                                    android:contentDescription="@string/gallery"
                                    android:layout_width="250dp"
                                    android:layout_height="160dp"
                                    android:layout_centerHorizontal="true"
                                    android:layout_centerVertical="true"
                                    android:src="@drawable/img_friend3" />
                                <TextView
                                    android:id="@+id/TxtFriendName3"
                                    android:layout_below="@id/ImgFriend3"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerHorizontal="true"
                                    android:text="@string/friend3"
                                    android:layout_marginTop="5dp"
                                    android:textColor="@color/colorPrimary"
                                    android:textSize="18sp"
                                    android:fontFamily="@font/gilroybold" />
                                <TextView
                                    android:id="@+id/TxtFriendDesc3"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@id/TxtFriendName3"
                                    android:layout_centerHorizontal="true"
                                    android:text="@string/descfriend3"
                                    android:textColor="@color/colorSlateGray"
                                    android:textSize="12sp"
                                    android:fontFamily="@font/gilroyregular"
                                    android:textStyle="italic"/>
                            </RelativeLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card5"
                        android:layout_width="365dp"
                        android:layout_height="250dp"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:background="@color/colorPrimary"
                        card_view:cardCornerRadius="8dp"
                        android:layout_marginLeft="14dp"
                        android:layout_marginRight="14dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/colorBgWhite">

                            <ImageView
                                android:id="@+id/ImgFriend4"
                                android:contentDescription="@string/gallery"
                                android:layout_width="250dp"
                                android:layout_height="160dp"
                                android:layout_centerHorizontal="true"
                                android:layout_centerVertical="true"
                                android:src="@drawable/img_friend4" />
                            <TextView
                                android:id="@+id/TxtFriendName4"
                                android:layout_below="@id/ImgFriend4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:text="@string/friend4"
                                android:layout_marginTop="5dp"
                                android:textColor="@color/colorPrimary"
                                android:textSize="18sp"
                                android:fontFamily="@font/gilroybold" />
                            <TextView
                                android:id="@+id/TxtFriendDesc4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/TxtFriendName4"
                                android:layout_centerHorizontal="true"
                                android:text="@string/descfriend4"
                                android:textColor="@color/colorSlateGray"
                                android:textSize="12sp"
                                android:fontFamily="@font/gilroyregular"
                                android:textStyle="italic"/>
                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>

            </LinearLayout>

        </HorizontalScrollView>

    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        >
        <TextView
            android:id="@+id/txtdl"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:fontFamily="@font/gilroybold"
            android:text="My Daily Activities"
            />
        <View
            android:id="@+id/viewDaily"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/txtdl"
            android:layout_width="40dp"
            android:layout_height="2dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="5dp"
            android:paddingBottom="5dp"
            android:background="@color/colorPrimary" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_recycler_daily"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/viewDaily"
            />
    </RelativeLayout>

</LinearLayout>